--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 <body>
 	<script src="node_modules/p5/lib/p5.js"></script>
 	<script src="node_modules/p5/lib/addons/p5.sound.min.js"></script>
+	<script src="node_modules/p5/lib/addons/p5.sound.js"></script>
 	<script src="node_modules/p5play/planck.min.js"></script>
 	<script src="node_modules/p5play/p5play.js"></script>
 	<script src="sketch.js"></script>
 	<script src="Ball.js"></script>
+	<script src="Pipe.js"></script>
 </body>
 
 </html>
