--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 			margin:0;
 			padding: 0;
 		}
+		*{
+			margin:auto;
+		}
 	</style>
-</head>
-
-<body>
 	<script src="node_modules/p5/lib/p5.js"></script>
 	<script src="node_modules/p5/lib/addons/p5.sound.min.js"></script>
 	<script src="node_modules/p5/lib/addons/p5.sound.js"></script>
@@ -22,6 +22,10 @@
 	<script src="sketch.js"></script>
 	<script src="Ball.js"></script>
 	<script src="Pipe.js"></script>
+</head>
+
+<body>
+	
 </body>
 
 </html>
