--- a/index.html
+++ b/index.html
@@ -22,10 +22,20 @@
 	<script src="sketch.js"></script>
 	<script src="Ball.js"></script>
 	<script src="Pipe.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-	
+	<div id="instruction">
+		<h1>Instructions</h1>
+         <ul>
+            <li>Press Spacebar to make the bird jump.</li>
+			<li>You lose if the bird hits any pipe.</li>
+			<li>You lose if the bird touches the bottom.</li>
+			<li>Voice Activation is present use the sliders to manage the thresholds.</li>
+			<li>It is recommended to use voice activation in quite area.</li>
+		 </ul>
+	</div>
 </body>
 
 </html>
